@@ -840,10 +840,10 @@
         cloudi_service_filesystem,
         [{directory, "@cloudi_prefix@/tests/http_req/public_html/"},
          {write_append, ["/tests/http_req/hexpi.txt"]},
-         {refresh, 5}, % seconds
-         {cache, refresh}, % 2.5 seconds
-         %{files_size, 372}, % KiB (32 KiB for hexpi.txt)
-         %{replace, lfuda_gdsf},
+         {refresh, 10}, % seconds
+         {cache, refresh}, % 5 seconds
+         {files_size, 1024}, % KiB
+         {replace, lfuda_gdsf},
          {notify_one, [{"/tests/http_req/index.html/get", "/tests/echo/put"}]}
          ],
         immediate_closest,
