@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2021-04-12 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add cloudi_service_filesystem use_expires argument
+    * Improve cloudi_core supervisor child spec order
+    * Update supool
+
 2021-04-09 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add cloudi_service_filesystem replace_index argument for
